            * Documents :
                - In the context of the brick 'ChildFoldersBrick', "folder_model" is not injected anymore.
            * Billing :
                - The method 'populate.Populator.create_reports()' has been replaced by a new one, '_populate_reports()'.
            * Opportunities :
                - The class 'bricks.OpportunityCardHatBrick' (& the related template) has been reworked to follow the changes in app "persons".
                  A new class 'ContactsSummary' has been introduced, and the class variable "displayed_contacts_number" has been move into it.
                - The method 'populate.Populator.create_report_n_graphes()' has been replaced by a new one, '_populate_report_n_graphes()'.
            * Commercial :
                - The value 'constants.PROP_IS_A_SALESMAN' has been replaced by 'UUID_PROP_IS_A_SALESMAN'.
                - The UUIDs of the instances of 'models.ActtType' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                  A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
            * Tickets :
                - The UUIDs of the instances of models 'Status', 'Priority' & 'Criticity' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                    - In 'models.status', the constants '*_PK' & 'BASE_STATUS' have been removed.
                    - A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
            * Mobile :
                - In the function-views 'persons_portal()' & 'search_person()', "contact_model" & "orga_model" are not injected in the template context anymore.
                - The CSS classes referencing 'ActivityType' IDs have been renamed;
                  e.g. "activity-type-activities-activitytype_meeting" became "activity-type-meeting".